// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Headers component > renders header with actions correctly 1`] = `
<div>
  <header
    class="flex items-start justify-between"
  >
    <h1
      class="_text--heading-1_1aw48_13"
      data-testid="title"
    >
      Example for header with actions 
    </h1>
    <div
      class="flex flex-wrap justify-end items-center"
    >
      <button
        aria-controls="popover::r1::content"
        aria-expanded="false"
        aria-haspopup="dialog"
        class="_button_10f3x_2 _button--primary_10f3x_99 _button--sm_10f3x_34 _button--outline_10f3x_258"
        data-part="trigger"
        data-scope="popover"
        data-state="closed"
        dir="ltr"
        id="popover::r1::trigger"
        type="button"
      >
        <span
          class="_icon_i4xp0_2 _icon--chevron-down_i4xp0_70"
        />
        common_actions
      </button>
    </div>
  </header>
</div>
`;

exports[`Headers component > renders header with header buttons correctly 1`] = `
<div>
  <header
    class="flex items-start justify-between"
  >
    <h1
      class="_text--heading-1_1aw48_13"
      data-testid="title"
    >
      Example for header with header buttons
    </h1>
    <div
      class="flex flex-wrap justify-end items-center"
    >
      <div
        id="navigation-menu-changelog-trigger"
      >
        <ods-button
          class="whitespace-nowrap"
          label="mrc_changelog_header"
          size="sm"
          slot="menu-title"
          variant="ghost"
        />
      </div>
      <ods-popover
        position="bottom"
        trigger-id="navigation-menu-changelog-trigger"
        with-arrow="true"
      >
        <div>
          <a
            class="_link_udbet_2 _link--no-text_udbet_29"
            href="https://ovh.com/"
            label="mrc_changelog_changelog"
            rel="external"
            target="_blank"
          >
            <span>
              ​
            </span>
            <span
              class="_icon_i4xp0_2 _icon--external-link_i4xp0_190"
            />
          </a>
        </div>
        <div>
          <a
            class="_link_udbet_2 _link--no-text_udbet_29"
            href="https://ovh.com/"
            label="mrc_changelog_roadmap"
            rel="external"
            target="_blank"
          >
            <span>
              ​
            </span>
            <span
              class="_icon_i4xp0_2 _icon--external-link_i4xp0_190"
            />
          </a>
        </div>
        <div>
          <a
            class="_link_udbet_2 _link--no-text_udbet_29"
            href="https://ovh.com/"
            label="mrc_changelog_feature-request"
            rel="external"
            target="_blank"
          >
            <span>
              ​
            </span>
            <span
              class="_icon_i4xp0_2 _icon--external-link_i4xp0_190"
            />
          </a>
        </div>
      </ods-popover>
      <button
        aria-controls="popover::r0::content"
        aria-expanded="false"
        aria-haspopup="dialog"
        aria-label="user_account_guides_header"
        class="_button_10f3x_2 _button--primary_10f3x_99 _button--sm_10f3x_34 _button--ghost_10f3x_150"
        data-part="trigger"
        data-scope="popover"
        data-state="closed"
        dir="ltr"
        id="popover::r0::trigger"
        type="button"
      >
        <span
          aria-hidden="true"
          class="_icon_i4xp0_2 _icon--book_i4xp0_52"
        />
        user_account_guides_header
      </button>
    </div>
  </header>
</div>
`;

exports[`Headers component > renders header with title 1`] = `
<div>
  <header
    class="flex items-start justify-between"
  >
    <h1
      class="_text--heading-1_1aw48_13"
      data-testid="title"
    >
      Example for header
    </h1>
  </header>
</div>
`;
